# python_oop

./: README.md  poster.txt  pyproject.toml
1_introduction/: 0_prior.ipynb  1_basics.ipynb  1_definition.ipynb  1_object.ipynb  2_basics.ipynb  2_class.ipynb  2_operations.ipynb  2_operations.py  2x_operations.py  3_class.ipynb  3_instance.ipynb  3x.py  3x1.py  3x2.py  4_parameters.ipynb  4x.py  4x2.py  _example_object.py
2_pillars/: 1_encapsulation.py  1_inheritance.ipynb  1x.py  1x1.py  1x2.py  1x3.py  1x_inheritance.py  2_encapsulation.ipynb  2_encapsulation.py  2x.py  3_abstraction.ipynb  3_polymorphism.ipynb  3x.py  3x2.py  4_abstraction.ipynb  4_polymorphism.ipynb  4x.py  4x2.py
3_quality/: 1_cohesion.ipynb  2_coupling.ipynb
4_solid/: 1_SRP.ipynb  2_OCP.ipynb  3_LSP.ipynb  4_ISP.ipynb  5_DIP.ipynb
media/: python_oop.drawio
temp/: 1_definition.py  2_operations.py
